full-moon/tests/cases/fail/parser/method-call-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/method-call-3
---
error[ast]: expected `)` to close function call
  ┌─ source.lua:1:19
  │
1 │ return name:method(until)
  │                   ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:1:20
  │
1 │ return name:method(until)
  │                    ^^^^^


